<resources>
    <string name="app_name">Fitness Planner</string>
    <string name="encouragement_title">Мотивация</string>
    <string name="mood_diary_title">Дневник настроения</string>
    <string name="sleep_title">Здоровый сон</string>
    <string name="sound_of_nature_title">Звуки природы</string>
    <string name="add_mood_note">Добавить запись</string>
    <string name="hint_mood_note">Опишите свое настроение сегодня здесь</string>
    <string name="mood_bad">плохо</string>
    <string name="mood_normal">обычно</string>
    <string name="mood_good">отлично</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="mood_change_chart">График изменения настроения</string>
    <string name="begin">Начачть</string>
    <string name="stop">Закончить</string>
    <string name="breath_exercise_description">Людям, увы, мешают спать не только яркие экраны в комнате, но и дневные тревоги в голове. Все привыкли быть в курсе событий, мало кто умеет расслабляться. Что может помочь? Вдохи и выдохи, которых вы даже не замечаете!\nЧтобы начать дыхательную гимнастику нажмите кнопку Начать</string>
    <string name="recipe_item">Рецепты</string>
    <string name="hint_empty_response">Не найдено рецептов по вашему запросу</string>
    <string name="hint_query">Введите сюда название блюда</string>
    <string name="kkal">ккал:</string>
    <string name="total_time">Общее время:</string>
    <string name="ingredients">Ингредиенты:</string>
    <string name="error_loading_video">Ошибка загрузки видео. Повторите попытку позже</string>
</resources>